<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:theme="@style/Theme.DigitalUpload"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/header_shape" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical">
            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:background="@color/colorAccent"
                    android:layout_height="?attr/actionBarSize"
                    app:contentInsetStartWithNavigation="0dp"
                    app:layout_scrollFlags="scroll"
                    app:popupTheme="@style/AppTheme.PopupOverlay">

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:id="@+id/profile_pic_container"
                android:layout_marginVertical="40dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_user" />

                <ImageView
                    android:contentDescription="@string/app_name"
                    android:id="@+id/pro_pic_edit_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_edit"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"/>

            </RelativeLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:scrollbars="none"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/lytParent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_20"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameField"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:layout_marginTop="@dimen/spacing_medium">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/name"
                            android:enabled="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:inputType="textCapWords" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/phoneField"
                            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone_number"
                            android:layout_marginTop="@dimen/spacing_medium">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/phone"
                                android:enabled="false"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/black"
                                android:inputType="number" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/phone_icon"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_baseline_phone_24" />
                    </LinearLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rankField"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/rank"
                        android:layout_marginTop="@dimen/spacing_medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rank"
                            android:enabled="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:inputType="textCapWords" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/addrField"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:layout_marginTop="@dimen/spacing_medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/addr"
                            android:enabled="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:inputType="textPostalAddress" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/categoryField"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:enabled="false"
                        android:layout_height="wrap_content"
                        android:hint="@string/category"
                        android:layout_marginTop="@dimen/spacing_medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/category"
                            android:enabled="false"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/subCategoryField"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/sub_category"
                        android:layout_marginTop="@dimen/spacing_medium">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/category_sub"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:textColor="@color/black"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/edit"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="@dimen/spacing_large"
                        android:background="@drawable/btn_gradient"
                        android:text="@string/edit"
                        android:textAllCaps="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="@android:color/white" />
                    <Button
                        android:id="@+id/update"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/btn_gradient"
                        android:text="@string/update"
                        android:textAllCaps="true"
                        android:clickable="true"
                        android:focusable="true"
                        android:textColor="@android:color/white" />



                </LinearLayout>
            </ScrollView>



        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="200dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>